Added toCelsius to Utils.js Added deprecated log message for disableDry and disableFan Readme, Comments, ToDos, Debug logger changes

--- a/config-sample.json
+++ b/config-sample.json
@@ -9,6 +9,7 @@
 	"platforms": [
 		{
 			"platform": "SensiboAC",
+			"auth": "api-key",
 			"apiKey": "***************",
 			"allowRepeatedCommands": false,
 			"carbonDioxideAlertThreshold": 1500,
