--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "displayName": "Sensibo for Homebridge",
   "name": "homebridge-sensibo-ac",
+  "platformName": "SensiboAC",
   "version": "2.5.0-alpha.3",
   "description": "Homebridge plugin for Sensibo - Smart AC Control",
   "license": "GNU",
