--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "axios-retry-after": "^2.1.0",
     "fakegato-history": "^0.6.4",
     "node-persist": "^3.1.3"
   },
