--- a/package.json
+++ b/package.json
@@ -27,21 +27,21 @@
   },
   "engines": {
     "node": ">=18.17.0",
-    "homebridge": "^1.7.0"
+    "homebridge": ">=1.7.0"
   },
   "dependencies": {
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "axios-retry-after": "^2.1.0",
     "fakegato-history": "^0.6.4",
-    "node-persist": "^3.1.3"
+    "node-persist": "^4.0.1"
   },
   "devDependencies": {
-    "@eslint/js": "^8.53.0",
-    "@stylistic/eslint-plugin": "^1.8.1",
+    "@eslint/js": "^9.4.0",
+    "@stylistic/eslint-plugin": "^2.1.0",
     "@types/node-persist": "^3.1.8",
-    "eslint": "^8.57.0",
-    "homebridge": "^1.8.1",
-    "nodemon": "^3.1.0"
+    "eslint": "^9.4.0",
+    "homebridge": "^1.8.2",
+    "nodemon": "^3.1.3"
   },
   "scripts": {
     "lint": "eslint .",
