--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "displayName": "Sensibo for Homebridge",
   "name": "homebridge-sensibo-ac",
-  "version": "2.5.0-alpha.3",
+  "version": "2.5.0",
   "description": "Homebridge plugin for Sensibo - Smart AC Control",
   "license": "GNU",
   "repository": {
